<resources>
    <string name="app_name">Bel Jomla</string>


    <string name="carts">Carts</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="shopping">Shopping</string>
    <string name="locations">Locations</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="name_placeholder">Abdullah Barnawi</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="verification_code">Verification Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_mobile">Enter Your Mobile</string>
    <string name="_966">+966</string>
    <string name="_5xxxxxxxx">5xxxxxxxx</string>
    <string name="next">Next</string>
    <string name="saudi_arabia_966">Saudi Arabia ( + 966 )</string>
    <string name="please_type_the_verification_code_sent_to_x">Please type the verification code sent to %s</string>
    <string name="please_type_the_verification_code_sent_to_966xxxxxxxxx">Please type the verification code sent to +966xxxxxxxxx</string>
    <string name="_4325">4325</string>
    <string name="did_not_receive_sms_in_42s">Did not receive SMS in %ds ?</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="wrong_verif_code">Wrong Verification Code</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="thank_you_info">Your order with price %.2f SAR has been saved and will reach within 48 hours</string>
    <string name="thank_you_app_name">Thank you for using %s</string>
    <string name="x_pcs">%d pcs</string>
    <string name="sr_x">SR %.2f</string>
    <string name="no_decimal_sr_x">SR %.0f</string>
    <string name="sar_x">SAR %.2f</string>
    <string name="order_num_x">Order: %s</string>
    <string name="too_many_requests">You have sent too many requests… Try again in 24 hours</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name_here">Your First Name Here</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_number_here">Your Number Here</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="terms_conds">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="get_free_credits">Get Free Credits</string>
    <string name="title_activity_settings">Settings</string>

    <string name="email">Email</string>
    <string name="demo_mail">Demo@mail.com</string>
    <string name="save">Save</string>
    <string name="name_should_not_be_empty">Name should not be empty</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="search_products">Search Products</string>
    <string name="dhahran_king_fahd_university">Dhahran, King Fahd University ....</string>
    <string name="change_braces">(Change)</string>
    <string name="category">Category</string>
    <string name="frozen">Frozen</string>
    <string name="milk_and_cheese"><![CDATA[Milk & Cheese]]></string>
    <string name="sub_category">Sub Category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove">Remove</string>
    <string name="_10">10</string>
    <string name="balance">Balance</string>
    <string name="points">Points</string>
    <string name="my_addresses">My Addresses</string>
    <string name="manage_your_locations">Manage Your Locations</string>
    <string name="orders_history">Orders History</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="points_soon">Points Feature Will Be Available Soon</string>
    <string name="my_locations">My Locations</string>
    <string name="choose_delivery_address">Choose Delivery Address</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="total_colon">Total:</string>
    <string name="including_vat">( Including VAT )</string>
    <string name="setting_up_you_account">Setting Up You Account</string>
    <string name="setting_up_the_servers">Setting Up The Servers</string>
    <string name="you_can_resend_now">You can Resend now</string>
    <string name="checkout">Checkout</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="wallet">Wallet</string>
    <string name="credit_card">Credit Card</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment">Payment</string>
    <string name="change">Change</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="edit">Edit</string>
    <string name="total">Total</string>
    <string name="orders">Orders</string>
    <string name="delete_order">Deleting Order</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this order?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_location_added">No Location Added</string>
    <string name="please_enter_req_fields">Please Enter Required Fields</string>
    <string name="verfication_failed">Verification Failed</string>
    <string name="complete_tasks_earn_points">Complete simple tasks to earn free points!</string>
    <string name="notification_turned_of">Notifications is turned on</string>
    <string name="notification_turned_on">Notification is turned if</string>
    <string name="arabic_might_not_work_well">Arabic may not work well</string>
    <string name="account_colon">Account:</string>
    <string name="general_settings">General</string>
    <string name="help">Help</string>
    <string name="report_technical_issues_or_suggest_new_features">Report technical issues or suggest new features</string>
    <string name="send_feedback">Send feedback</string>
    <string name="reach_out_to_us_if_you_have_any_issue">Reach out to us if you have any issue</string>
    <string name="contact_us">Contact Us</string>
    <string name="locale">en</string>
    <string name="sign_in_up">Sign In/Up</string>
    <string name="invalid_num_in_x">Invalid number in %s Please re-enter it.</string>
    <string name="verif_success">Verification Success</string>

</resources>
