<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation"
            app:startDestination="@id/fragment_shopping">

    <fragment android:id="@+id/fragment_carts"
              android:name="com.android.belJomla.views.fragments.Carts"
              android:label="@string/carts"
              tools:layout="@layout/fragment_carts">
        <action android:id="@+id/action_fragment_carts_to_fragment_shopping" app:destination="@id/fragment_shopping"/>
    </fragment>
    <fragment android:id="@+id/fragment_chat"

              android:name="com.android.belJomla.views.fragments.ChatFragment" android:label="@string/chat"
              tools:layout="@layout/fragment_chat"/>
    <fragment android:id="@+id/fragment_profile"
              android:name="com.android.belJomla.views.fragments.ProfileFragment"
              android:label="@string/profile" tools:layout="@layout/fragment_profile"/>
    <fragment android:id="@+id/fragment_shopping"
              android:name="com.android.belJomla.views.fragments.ShoppingFragment"
              android:label="@string/shopping" tools:layout="@layout/fragment_shopping">
        <action
                android:id="@+id/action_fragment_shopping_to_cartFragment2"
                app:destination="@id/cartFragment"
                app:enterAnim="@anim/fragment_fade_enter"
                app:exitAnim="@anim/fragment_fade_exit"
                app:popEnterAnim="@anim/fragment_open_enter"
                app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
            android:id="@+id/cartFragment"
            android:name="com.android.belJomla.views.fragments.CartFragment"
            android:label="CartFragment"
            tools:layout="@layout/fragment_cart"
            />
    <fragment
            android:id="@+id/addressesFragment"
            android:name="com.android.belJomla.views.fragments.AddressesFragment"
            android:label="fragment_addresses"
            tools:layout="@layout/fragment_addresses" />
    <fragment
            android:id="@+id/historyFragment"
            android:name="com.android.belJomla.views.fragments.HistoryFragment"
            android:label="fragment_history"
            tools:layout="@layout/fragment_history" />
    <fragment
            android:id="@+id/balanceFragment"
            android:name="com.android.belJomla.views.fragments.BalanceFragment"
            android:label="fragment_balance"
            tools:layout="@layout/fragment_balance" />
</navigation>