<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".views.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/et_login_mobile"
            android:hint="@string/_5xxxxxxxx"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            />

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_login_next"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_login_mobile"/>

    <TextView
            android:text="@string/_966"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/et_login_mobile"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/et_login_mobile"
            app:layout_constraintBottom_toBottomOf="@+id/et_login_mobile"/>

    <ImageView
            android:src="@drawable/logo_place_holder"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>