<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            >

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/nested_scroll_view"
                app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="700dp"
                    app:cardCornerRadius="64dp"
                    app:cardBackgroundColor="#F9F9F9"
                    android:layout_marginTop="200dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <TextView
                            android:text="@string/first_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_label_fname"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/segoeuib"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="64dp"
                            android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="@+id/et_fname"/>

                    <EditText
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/your_first_name_here"
                            android:ems="10"
                            android:textSize="13sp"
                            android:maxLines="1"

                            android:id="@+id/et_fname"
                            android:layout_marginTop="24dp"
                            app:layout_constraintTop_toBottomOf="@+id/tv_label_fname"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="32dp"/>

                    <TextView
                            android:text="@string/last_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_label_lname"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/segoeuib"
                            android:layout_marginTop="51dp"
                            app:layout_constraintTop_toBottomOf="@+id/et_fname"
                            app:layout_constraintStart_toStartOf="@+id/et_fname"
                            />

                    <EditText
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/your_last_name"
                            android:ems="10"
                            android:id="@+id/et_lname"
                            android:textSize="13sp"
                            android:maxLines="1"
                            android:imeOptions="actionDone"
                            app:layout_constraintStart_toStartOf="@+id/tv_label_lname"
                            android:layout_marginTop="24dp"
                            app:layout_constraintTop_toBottomOf="@+id/tv_label_lname"
                            />

                    <Button
                            android:text="@string/sign_up"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_signup"
                            android:textColor="@color/white"
                            android:background="@color/dark_blue"

                            android:layout_marginTop="100dp"
                            app:layout_constraintTop_toBottomOf="@+id/et_lname"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="32dp"
                            app:layout_constraintStart_toStartOf="@+id/et_lname"
                            app:layout_constraintEnd_toEndOf="@+id/et_lname"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </ScrollView>

        <TextView
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:fontFamily="@font/segoeuib"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_lbl_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_label_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/segoeuisl"
                android:text="@string/welcome"
                android:textColor="@color/signup_welcome_grey"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_lbl_sign_up"
                app:layout_constraintStart_toStartOf="@+id/nested_scroll_view" />

        <ProgressBar
                android:id="@+id/pb_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>