<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="phoneNumber"
                type="String" />
    </data>
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"

        >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            tools:context=".views.fragments.VerificationFragment">


        <TextView
                android:id="@+id/tv_verif_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/seguisb"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/dark_white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_mini_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/segoeui"
                android:gravity="center"
                android:text="@{@string/please_type_the_verification_code_sent_to_x(phoneNumber)}"
                android:textColor="@color/mini_white"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_verif_label"
                app:layout_constraintStart_toStartOf="@+id/tv_verif_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_verif_label"
                tools:text="@string/please_type_the_verification_code_sent_to_966xxxxxxxxx" />

        <EditText
                android:id="@+id/et_verification"
                android:layout_width="300dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="16dp"

                android:background="@drawable/edit_text_verif_background"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mini_label" />

        <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="350dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/did_not_receive_sms_in_42s"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_resend_sms"
                app:layout_constraintStart_toStartOf="@+id/tv_mini_label"
                app:layout_constraintTop_toBottomOf="@+id/et_verification" />

        <TextView
                android:id="@+id/tv_resend_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/segoeuib"
                android:padding="4dp"
                android:text="@string/resend_sms"
                android:textColor="@color/dark_white"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tv_mini_label"
                app:layout_constraintStart_toEndOf="@+id/tv_counter"
                app:layout_constraintTop_toBottomOf="@+id/et_verification" />

        <ProgressBar
                android:id="@+id/pb_loading2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>
